--- a/Floating_Quote_Cards.html
+++ b/Floating_Quote_Cards.html
@@ -23,13 +23,13 @@
         #main {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-around;
+            justify-content: center;
             background-color: lightblue;
         }
 
         .card {
             width: 20%;
-            margin: 40px;
+            margin: 4%;
             padding: 20px;
             border: 1px solid lightgray;
             box-shadow: -10px 10px 10px rgb(8, 124, 163);
