--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }
         div {
             border: 1px solid black;
-            margin: 15px 200px;
+            margin: 15px 20%;
             padding: 5px 50px;
             border-radius: 5px;
             background-color: rgb(194, 163, 235);
