--- a/Floating_Quote_Cards.html
+++ b/Floating_Quote_Cards.html
@@ -60,6 +60,18 @@
 
         .card h4 {
             text-align: right;
+        } 
+        
+        @media only screen and (max-width: 600px) {
+            .card {
+                width: 30%;
+            }
+        }
+
+        @media only screen and (max-width: 360px) {
+            .card {
+                width: 25%;
+            }
         }
     </style>
 
