--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
         div:hover {
             box-shadow: -2px 2px 6px rgb(194, 163, 235);
         }
+
+        @media only screen and (max-width: 600px) {
+            div {
+                margin: 15px 25px;
+            }
+        }
     </style>
 
 </head>
