Added Word-Break in Responsiveness

--- a/Floating_Quote_Cards.html
+++ b/Floating_Quote_Cards.html
@@ -35,6 +35,7 @@
             box-shadow: -10px 10px 10px rgb(8, 124, 163);
             border-radius: 5px;
             background-color: white;
+            word-break: break-word;
 
             animation-name: floating;
             animation-duration: 3s;
